# frag

./: .gitignore  README.md  ROADMAP.md  TECHNICAL_GUIDE.md  package.json
backend/: CMakeLists.txt  Dockerfile  config.example.json  docker-compose.yml
backend/src/: auth.hpp  database.cpp  database.hpp  handlers.cpp  handlers.hpp  main.cpp  rate_limiter.hpp  server.cpp  server.hpp  utils.hpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  crypto.js  network.js  ui.js
scripts/: generate-sri.js
tests/: fragmentation.test.mjs
